# Client-Server-Chat

./: log.txt
Client/: CMakeLists.txt
Client/Production/Source/: Client.cpp
Commom/Libraries/Socket/: ClientSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
Commom/Production/Header/: Chat.h  Global.h  User.h
Commom/Production/Source/: Chat.cpp  Global.cpp  User.cpp
Server/: CMakeLists.txt
Server/Production/Source/: Server.cpp
